src/components/input-style/input-style.scss
@import 'abstracts/variables';
$m-input-style--color-default-text: $m-color--disabled !default;
$m-input-style--color-focus: $m-color--interactive !default;
$m-input-style--color-error: $m-color--error !default;
$m-input-style--color-valid: $m-color--success !default;
$m-input-style--color-disabled: $m-color--disabled !default;
$m-input-style--color-waiting: $m-color--active !default;
$m-input-style--padding: 4px !default;

.m-input-style {
    position: relative;
    z-index: 0;
    display: inline-flex;
    flex-direction: column;
    outline: none;

    &::before,
    &::after {
        position: absolute;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 2;
        content: '';
        display: block;
    }

    &::before {
        transition: border-color $m-transition-duration ease;
        width: 100%;
        border-bottom: 1px solid $m-color--grey;
    }

    &::after {
        transition: width $m-transition-duration--l ease-in-out;
        width: 0;
        height: 2px;
        background: $m-input-style--color-focus;
    }

    &:hover:not(.m--is-disabled):not(.m--is-waiting):not(.m--has-error):not(.m--is-valid):not(.m--is-focus),
    &.m--has-value {
        &:not(.m--is-readonly):not(.m--has-error)::before {
            border-color: $m-color--text;
        }
    }

    &:hover:not(.m--is-disabled):not(.m--is-waiting):not(.m--has-error):not(.m--is-valid):not(.m--is-focus) {
        .m-input-style__label {
            color: $m-color--text;
        }
    }

    &.m--is-focus:not(.m--is-readonly) {
        &::after {
            width: 100%;
        }
    }

    &.m--is-focus:not(.m--has-error):not(.m--is-valid) {
        .m-input-style__label,
        .m-icon-button.m-icon-button,
        .m-icon.m-icon {
            color: $m-input-style--color-focus;
        }
    }

    &.m--is-label-up {
        cursor: text;

        .m-input-style {
            &__label {
                transform: translate3d(0, -3px, 0) scale(0.8); // Magic number
                z-index: 1;
                width: 100%;
            }
        }
    }

    &:not(.m--is-label-up) {
        &.m--has-label .m-input-style__body__left {
            opacity: 0;
        }
    }

    &.m--has-error {
        &::before {
            border-color: $m-input-style--color-error;
        }

        &::after {
            background: $m-input-style--color-error;
        }

        .m-input-style__label,
        .m-icon-button.m-icon-button,
        .m-icon.m-icon {
            color: $m-input-style--color-error;
        }
    }

    &.m--is-valid {
        &::before {
            border-color: $m-input-style--color-valid;
        }

        &::after {
            background: $m-input-style--color-valid;
        }

        .m-input-style__label,
        .m-icon-button.m-icon-button,
        .m-icon.m-icon {
            color: $m-input-style--color-valid;
        }
    }

    &.m--is-disabled,
    &.m--is-waiting {
        &::before {
            border-bottom-style: dashed;
            border-color: $m-input-style--color-disabled;
        }

        &::after {
            width: 0;
            background: $m-input-style--color-disabled;
        }

        .m-input-style__label,
        .m-input-style__body,
        .m-icon-button.m-icon-button,
        .m-icon.m-icon,
        input,
        textarea {
            color: $m-input-style--color-disabled;
        }

        input,
        textarea {
            user-select: none;
        }
    }

    &.m--is-disabled {
        &,
        .m-input-style__label,
        .m-input-style__body,
        .m-input-style__body__left,
        .m-input-style__body__right,
        .m-input-style__body input,
        .m-input-style__body div,
        .m-input-style__body span,
        .m-icon-button.m-icon-button,
        .m-icon.m-icon {
            color: $m-input-style--color-disabled;
            cursor: not-allowed;
            user-select: none;
        }
    }

    &.m--is-waiting {
        &,
        .m-input-style__label,
        .m-input-style__body,
        .m-input-style__body__left,
        .m-input-style__body__right,
        .m-input-style__body input,
        .m-input-style__body div,
        .m-input-style__body span,
        .m-icon-button.m-icon-button,
        .m-icon.m-icon {
            cursor: wait;
        }
    }

    &.m--has-label {
        .m-input-style__body {
            margin-top: -12px; // Magic number
        }
    }

    &.m--is-anim-active {
        .m-input-style {
            &__label {
                transition-property: color, transform;
                transition-duration: $m-transition-duration--l;
                transition-timing-function: ease;
            }

            &__body__left {
                transition: opacity 0.3s ease;
            }
        }
    }

    &__label,
    &__body__adjust-width-auto {
        padding-right: $m-padding;
    }

    &__label {
        position: relative;
        top: 0;
        left: 0;
        z-index: 1;
        transform-origin: 0 0;
        transform: translate3d(0, 12px, 0); // Magic number
        display: inline-flex;
        align-items: center;
        width: 100%;
        margin-bottom: 4px; // Magic number
        font-size: $m-font-size;
        font-weight: $m-font-weight;
        color: $m-color--grey-darker;
        cursor: pointer;
        background-color: #fff;

        .m-icon {
            font-size: 85%;
            margin-right: $m-padding--s;
        }
    }

    &__required-marker {
        color: $m-color--accent;
        margin-left: 2px;
    }

    &__body {
        position: relative;
        z-index: 3;
        display: flex;
        align-items: center;
        flex: 1 1 auto;
        width: 100%;
        font-weight: $m-font-weight;
        text-decoration: none;
        padding-bottom: $m-input-style--padding;
        background-color: $m-color--white;

        .m--is-focus & {
            padding-bottom: $m-input-style--padding / 2;
        }

        &,
        div,
        span {
            cursor: text;
        }

        &__left {
            position: relative;
            min-height: 24px;
            flex: 1 1 auto;
            // overflow: hidden;

            .m--has-border-top & {
                .m--is-focus & {
                    padding-top: 4px;
                    margin-top: 4px;
                }

                &::before,
                &::after {
                    top: 0;
                    content: "";
                    position: absolute;
                    display: block;
                    transition: background-color $m-transition-duration--l ease-in-out, width $m-transition-duration--l ease-in-out;
                }

                &::before {
                    width: 100%;
                    height: 2px;

                    .m--is-focus & {
                        background-color: $m-color--interactive;
                    }

                    .m--is-focus.m--is-valid & {
                        background-color: $m-input-style--color-valid;
                    }

                    .m--is-focus.m--has-error & {
                        background-color: $m-input-style--color-error;
                    }
                }

                &::after {
                    width: 0;
                    height: 4px;

                    .m--is-focus & {
                        width: 100%;
                        background-color: $m-color--interactive;
                    }

                    .m--is-focus.m--is-valid & {
                        background-color: $m-input-style--color-valid;
                    }

                    .m--is-focus.m--has-error & {
                        background-color: $m-input-style--color-error;
                    }
                }
            }
        }

        &__right {
            display: flex;
        }

        &__transparent-text {
            opacity: 0;
            width: 0;
            user-select: none;
        }

        &__adjust-width-auto {
            height: 0;
            opacity: 0;
            user-select: none;
            white-space: nowrap;
        }

        .m-icon-button.m-icon-button,
        .m-icon.m-icon {
            position: relative;
            z-index: 0;
            font-size: 16px; // Magic number
            color: $m-color--grey-darker;
        }

        .m-icon-button.m-icon-button {
            min-width: auto;
            min-height: auto;
        }

        .m-icon.m-icon {
            transition: color 0.3s ease;
        }
    }

    div {
        outline: none;
    }

    ::placeholder {
        color: $m-color--disabled;
    }

    &__body,
    input,
    textarea {
        outline: none;
        text-overflow: ellipsis;
        font-family: $m-font-family;
        font-size: $m-font-size;
        font-weight: $m-font-weight--bold;
        text-align: left;
        background: none;
        border: none;
        color: $m-color--text;
    }

    input,
    textarea {
        cursor: text;
        overflow: hidden;
        width: 100%;
        padding: 0;
        line-height: $m-line-height;

        @include m-is-ie() {
            vertical-align: middle;
        }

        &::-ms-clear,
        &::-ms-reveal {
            display: none;
        }

        &:-webkit-autofill {
            background: rgba($m-color--white, 0);
            -webkit-box-shadow: 0 0 0 1000px $m-color--white inset !important;
        }

        &[readonly=readonly] {
            cursor: pointer;
        }
    }

    textarea {
        resize: none;
    }

    &.m--is-tag-h1,
    &.m--is-tag-h2,
    &.m--is-tag-h3,
    &.m--is-tag-h4,
    &.m--is-tag-h5,
    &.m--is-tag-h6 {
        input,
        textarea,
        ::placeholder,
        .m-input-style__body__transparent-text {
            font-family: $m-font-family;
            font-weight: $m-font-weight--bold;
        }
    }

    &.m--is-tag-h1 {
        &:not(.m--is-label-up) .m-input-style__label {
            transform: translate3d(0, 38px, 0); // Magic number
        }

        input,
        textarea,
        ::placeholder,
        .m-input-style__body__transparent-text {
            font-size: $m-font-size--h1;
        }
    }

    &.m--is-tag-h2 {
        &:not(.m--is-label-up) .m-input-style__label {
            transform: translate3d(0, 33px, 0); // Magic number
        }

        input,
        textarea,
        ::placeholder,
        .m-input-style__body__transparent-text {
            font-size: $m-font-size--h2;
        }
    }

    &.m--is-tag-h3 {
        &:not(.m--is-label-up) .m-input-style__label {
            transform: translate3d(0, 28px, 0); // Magic number
        }

        input,
        textarea,
        ::placeholder,
        .m-input-style__body__transparent-text {
            font-size: $m-font-size--h3;
        }
    }

    &.m--is-tag-h4 {
        &:not(.m--is-label-up) .m-input-style__label {
            transform: translate3d(0, 23px, 0); // Magic number
        }

        input,
        textarea,
        ::placeholder,
        .m-input-style__body__transparent-text {
            font-size: $m-font-size--h4;
        }
    }

    &.m--is-tag-h5 {
        &:not(.m--is-label-up) .m-input-style__label {
            transform: translate3d(0, 18px, 0); // Magic number
        }

        input,
        textarea,
        ::placeholder,
        .m-input-style__body__transparent-text {
            font-size: $m-font-size--h5;
        }
    }

    &.m--is-tag-h6 {
        input,
        textarea,
        ::placeholder,
        .m-input-style__body__transparent-text {
            font-size: $m-font-size--h6;
        }
    }

    &.m--is-tag-p {
        input,
        textarea,
        ::placeholder,
        .m-input-style__body__transparent-text {
            font-weight: $m-font-weight;
        }
    }
}

